Fix buttons rendering wrong height on iOS

--- a/src/subtitulamos/resources/assets/css/app.css
+++ b/src/subtitulamos/resources/assets/css/app.css
@@ -117,6 +117,7 @@ body {
 button {
   cursor: pointer;
   width: max-content;
+  padding: 0;
 }
 
 button,
